--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -14,13 +14,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".main.view.SucceededOperation"></activity>
+        <activity android:name=".features.view.DashBoard"></activity>
+        <activity android:name=".main.view.SucceededOperation" />
         <activity
             android:name=".signup.stroreCreation.view.CreateStoreImpl"
             android:label="@string/title_activity_create_store"
             android:theme="@style/AppTheme.NoActionBar" />
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
+
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyC3ciGdt_lzREEd70E3OfNxZPPaTxy-ENQ"/>
         <activity android:name=".signup.accountCreation.view.CreateUserImpl" />
         <activity android:name=".signup.codeVerification.view.CodeVerificationImpl" />
+        <activity android:name=".features.enquiry.enquiry.view.EnquiryParameters" />
+        <activity android:name=".features.enquiry.map.view.Map" />
         <activity android:name=".signup.phoneVerification.view.PhoneVerificationImpl" />
         <activity android:name=".main.view.MainActivity">
             <intent-filter>
@@ -35,7 +41,7 @@
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.provider.Telephony.SMS_RECEIVED"></action>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
     </application>
